# INGInious-regex-short-answer-problem

./: README.md  pyproject.toml
docs/: README.md
src/inginious_regex_short_answer_problem/: __init__.py
src/inginious_regex_short_answer_problem/static/js/: studio.js  task.js
src/inginious_regex_short_answer_problem/templates/course_admin/subproblems/: regex_short_answer.html  regex_short_answer_templates.html
src/inginious_regex_short_answer_problem/templates/tasks/: regex_short_answer.html
